--- a/rpi/package.json
+++ b/rpi/package.json
@@ -1,6 +1,9 @@
 {
   "name": "test",
   "version": "0.0.0",
+  "dependencies": {
+      "serialport": "1.6.3"
+  },
   "engines": {
       "node": "0.10.22"
   }
