--- a/rpi/package.json
+++ b/rpi/package.json
@@ -2,6 +2,7 @@
   "name": "test",
   "version": "0.0.0",
   "dependencies": {
+    "serialport": "1.6.3"
   },
   "engines": {
       "node": "0.10.22"
